Perhaps an older version for ascript\ ko.3 was comitted? I added a note to explain why it was moved to .../argot.optional/broke/ The argot/Makefile change fixes argot sort linking. The linker was complaining about multiple definitions, which in the past worked. Now an addtional linker command line parameter is required.
The ascript/Makefile change moves the -ldl from afore to aft
the source file names which solves the linker problem.
Already documented in the previous commit,
but not included, a gcc bug is surmised.
I am a bit rusty with git having barely used git in about a year.

--- a/argot/Makefile
+++ b/argot/Makefile
@@ -202,7 +202,7 @@ $(REQ)sort:
 	@echo	-e	"byte\nsire"		>	$(REQ)sort
 
 $(LP)sort:	sort.c			$(LS)sortback.o    $(LS)sortbinc.o    $(LS)sortinc.o     $(LS)sortdec.o    $(LS)sortlong.o    $(LS)sortsame.o    $(LS)sorttiny.o
-	$(CC)	$(CFLAGS) $(LDFLAGS) -l:$(LS)sortback.o -l:$(LS)sortbinc.o -l:$(LS)sortinc.o  -l:$(LS)sortdec.o -l:$(LS)sortlong.o -l:$(LS)sortsame.o -l:$(LS)sorttiny.o -Wl,-soname,$(subst $(above)lib/,,$@) $< -o $@
+	$(CC)	$(CFLAGS) $(LDFLAGS) -l:$(LS)sortback.o -l:$(LS)sortbinc.o -l:$(LS)sortinc.o  -l:$(LS)sortdec.o -l:$(LS)sortlong.o -l:$(LS)sortsame.o -l:$(LS)sorttiny.o -Wl,-soname,$(subst $(above)lib/,,$@) $< -o $@ -Wl,--allow-multiple-definition
 
 $(REQ)stat:
 	@echo	-e	"byte\nint"		>	$(REQ)stat
